Whitespace incorrectly suppressed inside table. https://bugs.webkit.org/show_bug.cgi?id=251178 rdar://104934417

Reviewed by NOBODY (OOPS!).

This fixes an issue where blink and webkit ignores the whitespace text
nodes in tables against what the specification is saying. See the issue
https://github.com/w3c/csswg-drafts/issues/8358

The correct patch has been found by Ahmad Saleem.

* LayoutTests/TestExpectations:
* LayoutTests/imported/w3c/web-platform-tests/html/dom/elements/the-innertext-and-outertext-properties/getter-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/mathml/relations/html5-tree/dynamic-mozilla-162063-expected.txt:
* LayoutTests/platform/mac/fast/css-generated-content/015-expected.txt:
* LayoutTests/platform/mac/fast/css-generated-content/table-before-after-child-add-expected.txt:
* LayoutTests/platform/mac/fast/table/table-after-child-in-table-expected.txt:
* LayoutTests/platform/mac/fast/table/table-before-child-in-table-expected.txt:
* LayoutTests/platform/mac/fast/table/table-cell-after-child-in-table-expected.txt:
* LayoutTests/platform/mac/fast/table/table-cell-before-child-in-table-expected.txt:
* LayoutTests/platform/mac/fast/table/table-row-after-child-in-table-expected.txt:
* LayoutTests/platform/mac/fast/table/table-row-before-child-in-table-expected.txt:
* LayoutTests/platform/mac/tables/mozilla/bugs/bug2479-2-expected.txt:
* Source/WebCore/rendering/updating/RenderTreeUpdater.cpp:
(WebCore::RenderTreeUpdater::textRendererIsNeeded):

Co-authored-by: Ahmad Saleem <ahmad.saleem792+github@gmail.com>